--- a/src/components/AnimationFilters/AnimationFilters.module.scss
+++ b/src/components/AnimationFilters/AnimationFilters.module.scss
@@ -5,7 +5,7 @@
   color: #e2e2e2;
   background-color: #2b2b2b;
   margin-top: 15px;
-  padding: 15px;
+  padding: 10px;
 
   .title {
     font-size: 14px;
@@ -15,19 +15,16 @@
 
   .currentFilters {
     margin-bottom: 10px;
-    .listOwnerBlock {
+    .filter {
       background-color: #464646;
-      padding: 7px 10px 7px 15px;
       border-radius: 4px;
-      font-size: 16px;
-      .name {
-        transition: .2s color;
-        color: #dadada;
-        text-decoration: none;
-        &:hover {
-          color: #8f8f8f;
-          cursor: pointer;
-        }
+      font-size: 13px;
+      padding: 8px 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      &:not(:first-child) {
+        margin-top: 10px;
       }
       .cancelButton {
         width: 17px;
@@ -36,6 +33,25 @@
         &:hover {
           cursor: pointer;
         }
+      }
+    }
+    .userFilter {
+      .name {
+        transition: 0.2s color;
+        color: #dadada;
+        text-decoration: none;
+        &:hover {
+          color: #8f8f8f;
+          cursor: pointer;
+        }
+        display: inline-block;
+        width: 130px;
+      }
+    }
+    .currentFilter {
+      .text {
+        display: inline-block;
+        width: 130px;
       }
     }
   }
@@ -51,7 +67,7 @@
         font-size: 15px;
         background-color: #333333;
         padding: 8px 0px 8px 20px;
-        transition: .2s background-color;
+        transition: 0.2s background-color;
 
         &:hover {
           cursor: pointer;
@@ -70,7 +86,7 @@
         left: 0px;
         top: 0px;
         position: relative;
-        transition: .3s height;
+        transition: 0.3s height;
         overflow: hidden;
 
         .dropdownButton {
@@ -79,7 +95,7 @@
           height: 30px;
           font-size: 13px;
           background-color: #3a3a3a;
-          transition: .2s background-color;
+          transition: 0.2s background-color;
 
           &:not(:last-child) {
             border-bottom: 1px solid #505050;
@@ -104,5 +120,4 @@
       }
     }
   }
-
 }
