--- a/src/components/Animation/Animation.module.scss
+++ b/src/components/Animation/Animation.module.scss
@@ -1,5 +1,14 @@
 .wrapper {
   position: relative;
+  .listSorters {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    z-index: 1;
+  }
+  .pagesCounter {
+    padding-top: 50px;
+  }
   .animationList {
     display: flex;
     flex-direction: column;
