done styles for registration page

--- a/src/components/AnimationFilters/AnimationFilters.module.scss
+++ b/src/components/AnimationFilters/AnimationFilters.module.scss
@@ -35,6 +35,12 @@
         }
       }
     }
+    .searchItem {
+      &.hide {
+        opacity: 0;
+        display: none;
+      }
+    }
     .userFilter {
       .name {
         transition: 0.2s color;
