--- a/src/components/Registration/Registration.module.scss
+++ b/src/components/Registration/Registration.module.scss
@@ -1,26 +1,133 @@
 .wrapper {
-  position: relative;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #00000087;
+  opacity: 0;
+  transition: .5s opacity;
+  &.show {
+    opacity: 1;
+  }
   .registrationBlock {
-    margin: 0 auto;
+    position: relative;
+    width: 370px;
+    height: 295px;
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #272727;
+    border-radius: 4px;
+    .title {
+      display: inline-block;
+      font-size: 22px;
+      margin-top: 20px;
+    }
+    .close {
+      position: absolute;
+      right: 10px;
+      top: 10px;
+      border-radius: 4px;
+      border: 0px;
+      transition: .2s background-color;
+      background-color: transparent;
+      &:hover {
+        cursor: pointer;
+      }
+      img {
+        width: 25px;
+        height: 25px;
+      }
+    }
+    form {
+      display: inline-block; 
+      margin-top: 20px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
     .line {
       position: relative;
       margin-top: 8px;
+      label {
+        margin-right: 10px;
+        color: #ff0909;
+      }
       input {
-        width: 210px;
+        width: 300px;
+        box-sizing: border-box;
+        border: 0px solid black;
+        color: white;
+        background-color: #464646;
+        padding: 8px;
+        margin-right: 23px;
+        transition: 0.1s background-color;
+        &:focus {
+          outline: none;
+          background-color: #535353;
+        }
+        &:hover {
+          background-color: #464646;
+        }
+        &:-internal-autofill-selected {
+          appearance: menulist-button;
+          background-color: #464646 !important;
+          background-image: none !important;
+          color: white !important;
+        }
       }
       .error {
         position: absolute;
-        left: 225px;
-        top: 5px;
-        font-size: 11px;
+        left: 325px;
+        top: 8px;
+        font-size: 13px;
         color: red;
         width: max-content;
       }
-      &.button {
+      &.buttons {
+        margin-top: 15px;
         display: flex;
         justify-content: space-between;
+        align-items: flex-end;
+        width: 100%;
+        height: 57px;
+        button {
+          padding: 10px;
+          background-color: #272727;
+          border: 0px;
+          transition: .2s background-color;
+          color: white;
+          border-top: 1px solid #3e3e3e;
+          font-size: 17px;
+          &:hover {
+            cursor: pointer;
+            background-color: rgb(95, 95, 95);
+          }
+          &:focus {
+            outline: none;
+            background-color: #535353;
+          }
+          &.submit {
+            width: 70%;
+            height: 100%;
+            left: 10px;
+            bottom: 10px;
+            border-bottom-left-radius: 4px;
+          }
+          &.closeButton {
+            border-left: 1px solid #3e3e3e;
+            height: 100%;
+            width: 30%;
+            right: 10px;
+            bottom: 10px;
+            border-bottom-right-radius: 4px;
+          }
+        }
       }
     }
   }
