--- a/src/components/UserMenu/UserMenu.module.scss
+++ b/src/components/UserMenu/UserMenu.module.scss
@@ -50,25 +50,19 @@
         justify-content: space-between;
         margin-top: 10px;
         border-top: 1px solid #444343;
-        a {
-          text-decoration: none;
-          width: 50%;
-          color: rgb(226, 226, 226);
+        :nth-child(2) {
           border-bottom-right-radius: 4px;
           border-left: 1px solid #444343;
-          .button {
-            border-bottom-right-radius: 4px;
-          }
         }
         .button {
           position: relative;
-          overflow: hidden;
           height: 35px;
           display: flex;
           justify-content: center;
           align-items: center;
           background-color: #2b2b2b;
           transition: 0.2s background-color;
+          width: 50%;
           &:hover {
             cursor: pointer;
             background-color: rgb(58, 58, 58);
@@ -157,7 +151,7 @@
           cursor: pointer;
           background-color: rgb(58, 58, 58);
           .text {
-            transform: translateY(0px);
+            opacity: 1;
           }
         }
         img {
@@ -173,8 +167,8 @@
           font-size: 12px;
           background-color: rgb(58, 58, 58);
           opacity: 0.85;
-          transition: 0.2s transform;
-          transform: translateY(100%);
+          transition: 0.2s opacity;
+          opacity: 0;
           display: flex;
           justify-content: center;
           align-items: center;
