--- a/src/components/Animation/Animation.module.scss
+++ b/src/components/Animation/Animation.module.scss
@@ -13,6 +13,10 @@
     display: flex;
     flex-direction: column;
     margin-top: 15px;
+    .PagesCounterBottom {
+      width: 100%;
+      margin-top: 25px;
+    }
     .item {
       background-color: #272727;
       border-radius: 4px;
@@ -102,6 +106,7 @@
       flex-direction: row;
       flex-wrap: wrap;
       width: 100%;
+      margin-top: 0px;
       .item {
         transition: 0.1s width, 0.1s height;
         margin-left: 25px;
