--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,16 +5,24 @@
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   height: inherit;
+  display: flex;
+  flex-direction: row;
   .item {
-    display: inline-block;
+    display: inline-flex;
     line-height: 58px;
+    height: 58px;
     padding: 0 20px;
+    align-items: center;
       color: white;
       text-decoration: none;
       transition: .2s color;
       text-shadow: 2px 2px 2px rgb(128, 128, 128);
       &:hover {
         color: rgb(170, 170, 170);
+      }
+      img {
+        width: 30px;
+        height: 30px;
       }
   }
   .item:not(:first-child) {
