--- a/src/components/AnimationFilters/AnimationFilters.module.scss
+++ b/src/components/AnimationFilters/AnimationFilters.module.scss
@@ -17,9 +17,10 @@
     margin-bottom: 10px;
     .filter {
       background-color: #464646;
+      border: 1px solid #ef4d6e;
       border-radius: 4px;
       font-size: 13px;
-      padding: 8px 10px;
+      padding: 7px 10px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -50,8 +51,6 @@
           color: #8f8f8f;
           cursor: pointer;
         }
-        display: inline-block;
-        width: 130px;
       }
     }
     .currentFilter {
