--- a/src/components/ButtonSwitcher/ButtonSwitcher.module.scss
+++ b/src/components/ButtonSwitcher/ButtonSwitcher.module.scss
@@ -16,7 +16,7 @@
         }
         &:hover {
           cursor: pointer;
-          background-color: #555555;
+          background-color: #3e3d3d;
           &.added {
             background-color: rgb(139, 36, 36);
           }
