--- a/src/components/Stars/Stars.module.scss
+++ b/src/components/Stars/Stars.module.scss
@@ -1,25 +1,84 @@
 .wrapper {
   position: relative;
-  .star {
+  display: flex;
+  flex-direction: row-reverse;
+  .button {
+    position: relative;
     width: 33px;
     height: 33px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 38px;
-    background-color: transparent;
-    transition: .2s color;
+    font-size: 26px;
     line-height: 28px;
-    &.added {
-      color: #d6ab0e;
-    }
-    &:hover {
-      cursor: pointer;
+    .buttonInner {
+      position: absolute;
+      box-sizing: border-box;
+      left: 0px;
+      top: 0px;
+      width: 100%;
+      height: 100%;
+      visibility: hidden;
+      opacity: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 4px;
+      border: 1px solid #717171;
       background-color: transparent;
-      color: #8f8954;
+      transition: 0.2s background-color;
       &.added {
-        color: #927a24;
+        background-color: brown;
       }
+      &:hover {
+        cursor: pointer;
+        background-color: #3e3d3d;
+        &.added {
+          background-color: rgb(139, 36, 36);
+        }
+      }
+      &.buttonOpenStars {
+        border-top-left-radius: 0px;
+        border-bottom-left-radius: 0px;
+      }
+      &.visible {
+        visibility: visible;
+        opacity: 1;
+      }
+      img {
+        width: 22px;
+        height: 22px;
+        transform: rotate(45deg);
+      }
+    }
+  }
+  .starsWrap {
+    display: flex;
+    flex-direction: row;
+    box-sizing: border-box;
+    height: 33px;
+    padding-right: 5px;
+    padding-left: 5px;
+    opacity: 0;
+    visibility: hidden;
+    border: 1px solid #717171;
+    background-color: #272727;
+    border-right: 0px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    .star {
+      font-size: 24px;
+      line-height: 20px;
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      &.selected {
+        color: #d6ab0e;
+      }
+    }
+    &.visible {
+      opacity: 1;
+      visibility: visible;
     }
   }
 }
