--- a/src/components/Animation/Animation.module.scss
+++ b/src/components/Animation/Animation.module.scss
@@ -28,9 +28,9 @@
         background-color: #2c2c2c;
       }
       &.done {
-        background-color: #3c3434;
+        background-color: #36363c;
         &:hover {
-          background-color: #463d3d;
+          background-color: #3a3a42;
         }
       }
       .itemInner {
