--- a/src/components/AnimationDescription/AnimationDescription.module.scss
+++ b/src/components/AnimationDescription/AnimationDescription.module.scss
@@ -54,6 +54,9 @@
       flex-direction: row;
       justify-content: center;
       margin-bottom: 15px;
+      .buttonSwither {
+        margin-left: 15px;
+      }
     }
   }
   .descriptionWrap {
