--- a/src/components/ButtonSwitcher/ButtonSwitcher.module.scss
+++ b/src/components/ButtonSwitcher/ButtonSwitcher.module.scss
@@ -8,17 +8,17 @@
       flex-direction: row;
       border-radius: 5px;
       .button {
-        padding: 10px;
+        padding: 7px;
         border: 1px solid #717171;
         transition: .2s background-color;
         &.added {
-          background-color: brown;
+          background-color: #486894;
         }
         &:hover {
           cursor: pointer;
           background-color: #3e3d3d;
           &.added {
-            background-color: rgb(139, 36, 36);
+            background-color: #415b80;
           }
         }
       }
