--- a/src/components/Stars/Stars.module.scss
+++ b/src/components/Stars/Stars.module.scss
@@ -1,16 +1,11 @@
 .wrapper {
   position: relative;
   display: flex;
-  flex-direction: row-reverse;
   .button {
     position: relative;
     width: 33px;
     height: 33px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 26px;
-    line-height: 28px;
     .buttonInner {
       position: absolute;
       box-sizing: border-box;
@@ -24,17 +19,16 @@
       justify-content: center;
       align-items: center;
       border-radius: 4px;
-      border: 1px solid #717171;
-      background-color: transparent;
+      border: 1px solid #828282;
+      background-color: inherit;
       transition: 0.2s background-color;
       &.added {
-        background-color: brown;
+        background-color: #4960ab;
       }
       &:hover {
         cursor: pointer;
-        background-color: #3e3d3d;
         &.added {
-          background-color: rgb(139, 36, 36);
+          background-color: #445899;
         }
       }
       &.buttonOpenStars {
@@ -50,9 +44,21 @@
         height: 22px;
         transform: rotate(45deg);
       }
+      span {
+        font-size: 30px;
+        line-height: 30px;
+      }
+      .starInButton {
+        color: #cccccc;
+      }
+      .currentRating {
+        font-size: 20px;
+      }
     }
   }
   .starsWrap {
+    position: absolute;
+    right: 33px;
     display: flex;
     flex-direction: row;
     box-sizing: border-box;
@@ -61,8 +67,8 @@
     padding-left: 5px;
     opacity: 0;
     visibility: hidden;
-    border: 1px solid #717171;
-    background-color: #272727;
+    border: 1px solid #828282;
+    background-color: inherit;
     border-right: 0px;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
