--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,21 +8,62 @@
   display: flex;
   flex-direction: row;
   .item {
+    position: relative;
     display: inline-flex;
     line-height: 58px;
     height: 58px;
-    padding: 0 20px;
     align-items: center;
-      color: white;
-      text-decoration: none;
+
       transition: .2s color;
       text-shadow: 2px 2px 2px rgb(128, 128, 128);
-      &:hover {
-        color: rgb(170, 170, 170);
+      .link {
+        padding: 0 20px;
+        color: white;
+        text-decoration: none;
+        display: inline-flex;
+        align-items: center;
+        &:hover {
+          color: rgb(170, 170, 170);
+        }
       }
       img {
         width: 30px;
         height: 30px;
+      }
+      .dropdownWrap {
+        position: absolute;
+        top: 100%;
+        left: 0px;
+        z-index: 9;
+        display: flex;
+        flex-wrap: wrap;
+        width: 355px;
+        flex-direction: row;
+        opacity: 0;
+        visibility: hidden;
+        transition: .1s visibility, .1s opacity;
+        &.visible {
+          opacity: 1;
+          visibility: visible;
+        }
+        .dropdown {
+          background-color: #616161;
+          border-top: 1px solid #3e3e3e;
+          width: 175px;
+          height: 45px;
+          display: flex;
+          align-items: center;
+          padding-left: 15px;
+          box-sizing: border-box;
+          transition: .2s background-color;
+          &:nth-child(even) {
+            border-left: 1px solid #3e3e3e;
+          }
+          &:hover {
+            cursor: pointer;
+            background-color: rgb(170, 170, 170);
+          }
+        }
       }
   }
   .item:not(:first-child) {
