--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -23,11 +23,14 @@
         img {
           width: 50px;
           height: 50px;
+          opacity: 1;
+          transition: .2s opacity;
           &.disabled {
             opacity: .2;
             pointer-events: none;
           }
           &:hover {
+            opacity: .6;
             cursor: pointer;
           }
         }
