--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -86,7 +86,7 @@
               }
             }
           }
-          .date {
+          .date, .author {
             color: rgb(255, 255, 255);
             font-weight: bold;
             width: fit-content;
