--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -46,13 +46,13 @@
         overflow: hidden;
         width: 910px;
         height: 237px;
-        .animationListWrap {
+        .listWrap {
           position: absolute;
           display: flex;
           flex-direction: row;
           top: 0px;
           transition: .3s transform;
-          .animationItem {
+          .item {
             position: relative;
             border: 1px solid transparent;
             border-radius: 4px;
