--- a/src/components/PageView/PageView.module.scss
+++ b/src/components/PageView/PageView.module.scss
@@ -28,7 +28,7 @@
         background-color: #ef4d6e;
       }
     }
-    &.small {
+    &.list {
       flex-direction: column;
       :not(:first-child) {
         margin-top: 2px;
@@ -38,14 +38,14 @@
         height: 6px;
       }
     }
-    &.medium {
+    &.medium_list {
       flex-direction: column;
       .pageViewItem {
         width: 100%;
         height: 13px;
       }
     }
-    &.large {
+    &.tile {
       flex-direction: row;
       flex-wrap: wrap;
       .pageViewItem {
