--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -30,7 +30,7 @@
       width: 100%;
       margin-top: 0px;
       .item {
-        width: 23%;
+        width: 18%;
         margin-top: 2%;
         margin-left: 2%;
       }
@@ -65,6 +65,17 @@
   }
 }
 
+@media (max-width: 1350px) {
+  .wrapper {
+    .currentList {
+      &.tile {
+        .item {
+          width: 23%;
+        }
+      }
+    }
+  }
+}
 @media (max-width: 1100px) {
   .wrapper {
     .currentList {
@@ -76,7 +87,7 @@
     }
   }
 }
-@media (max-width: 900px) {
+@media (max-width: 850px) {
   .wrapper {
     .currentList {
       &.tile {
