--- a/src/components/ListItem/ListItem.module.scss
+++ b/src/components/ListItem/ListItem.module.scss
@@ -47,7 +47,9 @@
     padding: 0px 0px 0px 30px;
     display: flex;
     flex-direction: column;
-    padding-right: 242px;
+    &.placeForButtons {
+      padding-right: 242px;
+    }
     .title {
       font-size: 24px;
       margin-bottom: 10px;
