--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -19,7 +19,7 @@
       font-size: 13px;
       border: 0px solid black;
       background-color: transparent;
-      width: 350px;
+      width: 450px;
       color: white;
       &:focus {
         outline: transparent;
@@ -45,11 +45,20 @@
   }
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1100px) {
   .wrapper {
     .inputBlock {
       input {
-        width: 230px;
+        width: 300px;
+      }
+    }
+  }
+}
+@media (max-width: 850px) {
+  .wrapper {
+    .inputBlock {
+      input {
+        width: 100px;
       }
     }
   }
