--- a/src/components/UserMenu/UserMenu.module.scss
+++ b/src/components/UserMenu/UserMenu.module.scss
@@ -1,100 +1,43 @@
 .wrapper {
+  position: relative;
   box-sizing: border-box;
   border-radius: 4px;
   font-size: 14px;
   color: #e2e2e2;
   background-color: #2b2b2b;
-  .loginBlock {
-    position: relative;
+  .loginBlockMobile {
     display: flex;
-    justify-content: center;
     flex-direction: column;
-    width: 100%;
-    border-radius: 4px;
-    form {
-      width: 100%;
-      border-radius: 4px;
-      .input {
-        margin-left: 10px;
-        margin-top: 10px;
-        &:not(:first-of-type) {
-          margin-top: 10px;
-        }
-        input {
-          width: 169px;
-          box-sizing: border-box;
-          border: 0px solid black;
-          color: white;
-          background-color: #464646;
-          padding: 5px;
-          transition: 0.1s background-color;
-          &:focus {
-            outline: none;
-            background-color: #535353;
-          }
-          &:-internal-autofill-selected {
-            appearance: menulist-button;
-            background-color: #464646 !important;
-            background-image: none !important;
-            color: white !important;
-          }
-        }
-      }
-      .buttons {
-        button {
-          border: none;
-          width: 50%;
-          border-bottom-left-radius: 4px;
-        }
-        display: flex;
-        justify-content: space-between;
-        margin-top: 10px;
-        border-top: 1px solid #444343;
-        :nth-child(2) {
-          border-bottom-right-radius: 4px;
-          border-left: 1px solid #444343;
-        }
-        .button {
-          position: relative;
-          height: 35px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          background-color: #2b2b2b;
-          transition: 0.2s background-color;
-          width: 50%;
-          &:hover {
-            cursor: pointer;
-            background-color: rgb(58, 58, 58);
-          }
-          &:focus {
-            outline: none;
-          }
-          .text {
-            position: absolute;
-            color: white;
-            left: 0px;
-            top: 0px;
-            width: 100%;
-            height: 100%;
-            font-size: 12px;
-            opacity: 0.85;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-          }
-        }
-      }
-    }
-    .wrongAuth {
+    .buttonShowInputs {
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 20px;
-      color: #ce3333;
-      margin-top: 10px;
-      margin-bottom: 10px;
-      font-size: 12px;
+      background-color: rgb(43, 42, 42);
+      height: 48px;
+      transition: 0.2s background-color;
+      &:hover {
+        cursor: pointer;
+        background-color: #00000014;
+      }
+      &.active {
+        background-color: rgb(43, 42, 42);
+        &:hover {
+          cursor: pointer;
+          background-color: #00000014;
+        }
+      }
+      span {
+        width: min-content;
+      }
+      .angle {
+        margin-left: 10px;
+        width: 20px;
+        transition: 0.3s transform;
+        transform: rotate(0deg);
+        &.reverse {
+          transform: rotate(-180deg);
+        }
+      }
     }
   }
   .wrapperInfoUser {
@@ -175,5 +118,11 @@
         }
       }
     }
+  }
+}
+
+@media (max-width: 950px) {
+  .wrapper {
+    width: 33%;
   }
 }
