--- a/src/components/UsersMenu/UsersMenu.module.scss
+++ b/src/components/UsersMenu/UsersMenu.module.scss
@@ -6,7 +6,6 @@
   font-size: 14px;
   color: #e2e2e2;
   background-color: #2b2b2b;
-  margin-top: 15px;
   padding: 15px;
   .user {
     position: relative;
@@ -53,5 +52,11 @@
         color: rgb(180, 180, 180);
       }
     }
+  }
+}
+
+@media (max-width: 950px) {
+  .wrapper {
+    display: none;
   }
 }
