--- a/src/components/UserMenu/UserMenu.module.scss
+++ b/src/components/UserMenu/UserMenu.module.scss
@@ -8,22 +8,24 @@
   .loginBlockMobile {
     display: flex;
     flex-direction: column;
+    align-items: center;
     .buttonShowInputs {
       display: flex;
       justify-content: center;
       align-items: center;
+      width: -webkit-fill-available;
       background-color: rgb(43, 42, 42);
       height: 48px;
-      transition: 0.2s background-color;
+      transition: 0.1s background-color;
       &:hover {
         cursor: pointer;
-        background-color: #00000014;
+        background-color: #0000001c;
       }
       &.active {
         background-color: rgb(43, 42, 42);
         &:hover {
           cursor: pointer;
-          background-color: #00000014;
+          background-color: #0000001c;
         }
       }
       span {
@@ -123,6 +125,12 @@
 
 @media (max-width: 950px) {
   .wrapper {
-    width: 33%;
+    width: 20%;
+  }
+}
+
+@media (max-width: 800px) {
+  .wrapper {
+    width: 155px;
   }
 }
