--- a/src/components/Filters/Filters.module.scss
+++ b/src/components/Filters/Filters.module.scss
@@ -119,6 +119,7 @@
             text-decoration: none;
             color: white;
             padding-left: 20px;
+            padding-right: 5px;
           }
         }
       }
@@ -131,7 +132,7 @@
     display: flex;
     flex-direction: row;
     padding: 0;
-    z-index: 9;
+    z-index: 11;
     background-color: #2b2b2b;
     width: 80%;
     .dropdownsMobile {
@@ -141,8 +142,12 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+      height: -webkit-fill-available;
+      width: -moz-available;
       .dropdown {
+        height: fit-content;
         width: -webkit-fill-available;
+        width: -moz-available;
         &:not(:first-child) {
           margin-top: 0;
           .button {
@@ -177,5 +182,11 @@
     .currentFilters {
       margin-bottom: 0;
     }
+  }
+}
+
+@media (max-width: 700px) {
+  .wrapper {
+    width: 88%;
   }
 }
