--- a/src/components/ListSorters/ListSorters.module.scss
+++ b/src/components/ListSorters/ListSorters.module.scss
@@ -56,3 +56,25 @@
     pointer-events: none;
   }
 }
+
+@media (max-width: 700px) {
+  .wrapper {
+    .buttonShowSorters {
+      pointer-events: visible;
+      transition: .1s background-color;
+      &:hover {
+        cursor: pointer;
+        background-color: #ef4d6e;
+      }
+      .angle {
+        margin-left: 5px;
+        width: 15px;
+        transition: 0.3s transform;
+        transform: rotate(90deg);
+        &.reverse {
+          transform: rotate(270deg);
+        }
+      }
+    }
+  }
+}
