--- a/src/components/PagesCounter/PagesCounter.module.scss
+++ b/src/components/PagesCounter/PagesCounter.module.scss
@@ -77,3 +77,12 @@
     }
   }
 }
+
+@media (max-width: 700px) {
+  .wrapper {
+    text-align: left;
+    .pageButtonsWrap {
+      margin-left: 20px;
+    }
+  }
+}
