fix images in user page

--- a/src/components/ListItem/ListItem.module.scss
+++ b/src/components/ListItem/ListItem.module.scss
@@ -41,6 +41,8 @@
       max-height: inherit;
       border-radius: 4px;
       display: block;
+      min-width: 50px;
+      min-height: 50px;
     }
   }
   .info {
