--- a/src/components/User/User.module.scss
+++ b/src/components/User/User.module.scss
@@ -48,7 +48,7 @@
     }
     .angle {
       margin-left: 10px;
-      transition: .3s transform;
+      transition: 0.3s transform;
       transform: rotate(0deg);
       &.reverse {
         transform: rotate(-180deg);
@@ -71,61 +71,18 @@
       display: flex;
       align-items: center;
       height: 100%;
-      padding: 1%;
+      padding: 0 1% 1% 1%;
       .listWrap {
         display: flex;
         flex-direction: row;
-        flex-wrap: nowrap;
+        flex-wrap: wrap;
         width: 100%;
         .item {
           position: relative;
-          border: 1px solid transparent;
-          border-radius: 4px;
-          overflow: hidden;
           width: 14.5%;
-          height: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          position: relative;
-          transition: 0.2s border, 0.3s height;
-          &:hover {
-            border: 1px solid #888888;
-          }
-          &:not(:first-child) {
-            margin-left: 15px;
-          }
-          .image {
-            min-width: 100%;
-            min-height: 100%;
-            border-radius: 4px;
-            transition: 0.1s min-height;
-          }
-          .text {
-            position: absolute;
-            bottom: 0px;
-            left: 0px;
-            width: 100%;
-            background-color: black;
-            opacity: .9;
-            color: white;
-            padding: 5px 5px 10px;
-            box-sizing: border-box;
-            font-size: 11px;
-            transform: translateY(100%);
-            transition: .2s transform;
-            .title {
-              font-size: 13px;
-            }
-            .description {
-              margin-top: 5px;
-            }
-          }
-          &:hover {
-            .text {
-              transform: translateY(0);
-            }
-          }
+          margin-left: 2%;
+          margin-top: 2%;
+          min-width: 180px;
         }
         .restItems {
           background-color: #313131;
@@ -135,7 +92,10 @@
           flex-direction: column;
           border-radius: 4px;
           width: 14.5%;
-          margin-left: 15px;
+          margin-left: 2%;
+          margin-top: 2%;
+          min-width: 180px;
+          min-height: 230px;
           color: #969696;
           text-decoration: none;
           transition: 0.1s height;
@@ -226,10 +186,5 @@
   }
   100% {
     transform: rotate(360deg);
-  }
-}
-@media (max-width: 1000px) {
-  .restItems {
-    font-size: 12px;
   }
 }
