add field 'default' in sorter

--- a/src/components/ListSorters/ListSorters.module.scss
+++ b/src/components/ListSorters/ListSorters.module.scss
@@ -20,9 +20,9 @@
         transform: rotate(180deg);
       }
     }
-    &.hover {
-      height: 64px;
-    }
+    // &.hover {
+    //   height: 64px;
+    // }
     a {
       text-decoration: none;
       color: white;
