--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -17,7 +17,8 @@
       width: 100%;
       margin-top: 25px;
     }
-    &.list, &.medium_list {
+    &.list,
+    &.medium_list {
       .item {
         &:not(:first-child) {
           margin-top: 15px;
@@ -65,6 +66,21 @@
   }
 }
 
+@media (min-width: 1500px) {
+  .wrapper {
+    .currentList {
+      &.list, &.medium_list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        .item {
+          width: 49%;
+          margin-top: 1% !important;
+          margin-left: 1%;
+        }
+      }
+    }
+  }
+}
 @media (max-width: 1350px) {
   .wrapper {
     .currentList {
