--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,12 +1,18 @@
 .wrapper {
   position: relative;
+  .title {
+    font-size: 24px;
+    padding-bottom: 10px;
+  }
   .lastViewed {
     display: flex;
     flex-direction: column;
-    .title {
-      margin-bottom: 10px;
-      font-size: 22px;
-      margin-left: 20px;
+    &:not(:first-child) {
+      border-top: 1px solid #444444;
+      padding-top: 5px;
+    }
+    &:not(:last-child) {
+      padding-bottom: 15px;
     }
     .loading {
       height: 100px;
