--- a/src/components/Stars/Stars.module.scss
+++ b/src/components/Stars/Stars.module.scss
@@ -20,15 +20,16 @@
       align-items: center;
       border-radius: 4px;
       border: 1px solid #828282;
-      background-color: inherit;
+      background-color: #272727;
       transition: 0.2s background-color;
       &.added {
-        background-color: #4960ab;
+        background-color: #156f2a;
+        border: 0px;
       }
       &:hover {
         cursor: pointer;
         &.added {
-          background-color: #445899;
+          background-color: #299442;
         }
       }
       &.buttonOpenStars {
@@ -68,7 +69,7 @@
     opacity: 0;
     visibility: hidden;
     border: 1px solid #828282;
-    background-color: inherit;
+    background-color: #272727;
     border-right: 0px;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
