--- a/src/components/ButtonSwitcher/ButtonSwitcher.module.scss
+++ b/src/components/ButtonSwitcher/ButtonSwitcher.module.scss
@@ -28,14 +28,16 @@
     }
   }
   &.noChoose {
-    :nth-child(1) {
+    :first-child {
       border-bottom-left-radius: 4px;
       border-top-left-radius: 4px;
     }
-    :nth-child(2) {
+    :not(:first-child) {
+      border-left: 1px solid #272727;
+    }
+    :last-child {
       border-bottom-right-radius: 4px;
       border-top-right-radius: 4px;
-      border-left: 1px solid #272727;
     }
   }
 }
